@@ -2,10 +2,12 @@ NextGEN Gallery
 by Alex Rabe & NextGEN DEV Team
 
 V1.3.0
+- NEW : Search for images in the admin tab
 - NEW : Add new gallery also in manage tab
 - NEW : AJAX support for Imagebrowser and gallery navigation (THX to Anty)
 - Added : jQuery Multiple File Upload Plugin v1.44
 - Added : SWFUpload V2.2.0
+- Bugfix : Correct various PHP notice messages
 
 V1.2.1 - 22.03.2009
 - NEW : Support for IE8 Web Slices in widgets
